# practice_gazebo

./: .gitignore  README.md
base_pkg/: CMakeLists.txt  package.xml
base_pkg/src/: client.cpp  listener.cpp  service.cpp  talker.cpp
robot_control/: package.xml
robot_control/config/: robot_control.yaml
robot_control/launch/: robot_control.launch
robot_description/: CMakeLists.txt  model.config  package.xml
robot_description/launch/: display_gazebo.launch  display_rviz.launch
robot_description/urdf/: linear_slide_rail.gazebo  linear_slide_rail.urdf  linear_slide_rail.urdf.xacro
table_tennis_robot/box_description/: CMakeLists.txt  package.xml
table_tennis_robot/box_description/config/: robot_state_visualize.rviz
table_tennis_robot/box_description/launch/: box_description.launch  gazebo_load_box.launch
table_tennis_robot/box_description/models/: tabletennis_table.sdf
table_tennis_robot/box_description/urdf/: box.gazebo.xacro  box.xacro
table_tennis_robot/pingpong_description/: CMakeLists.txt  model.config  package.xml
table_tennis_robot/pingpong_description/config/: robot_state_visualize.rviz
table_tennis_robot/pingpong_description/launch/: gazebo_load_pingpong.launch  load_pingpong_ball.launch  pingpong_ball_description.launch
table_tennis_robot/pingpong_description/models/: pingpong (40mm).sdf  pingpong(scale2).sdf  pingpong.sdf  pingpong_ball.sdf  pingpong_static.sdf
table_tennis_robot/pingpong_description/urdf/: pingpong.gazebo.xacro  pingpong.urdf.xacro  pingpong.xacro
table_tennis_robot/profile_position_controllers/: CMakeLists.txt  package.xml  profile_position_controllers_plugins.xml
table_tennis_robot/profile_position_controllers/config/: TTbot_control_profile_position.yaml
table_tennis_robot/profile_position_controllers/launch/: TTbot_control.launch
table_tennis_robot/profile_position_controllers/src/: joint_profile_position_controller.cpp
table_tennis_robot/table_description/: CMakeLists.txt  model.config  package.xml
table_tennis_robot/table_description/config/: robot_state_visualize.rviz
table_tennis_robot/table_description/launch/: gazebo_load_tabletennis_table.launch  gazebo_load_tabletennis_table2.launch  rviz_table_bias.launch  table_upload.launch  tabletennis_table_description.launch
table_tennis_robot/table_description/models/: model.config  tabletennis_table.sdf
table_tennis_robot/table_description/urdf/: tabletennis_table.gazebo.xacro  tabletennis_table.urdf.xacro  tabletennis_table.xacro  tabletennis_table_bias.urdf.xacro  tabletennis_table_bias.xacro
table_tennis_robot/table_tennis_robot_bringup/: CMakeLists.txt  package.xml
table_tennis_robot/table_tennis_robot_bringup/include/: arduserial.h  epos_communication.h  tabletennis_robot_epos2.h  tabletennis_robot_hw.h
table_tennis_robot/table_tennis_robot_bringup/launch/: load_hw_and_controller.launch  pub_joint_state_and_plot.launch  tabletennis_robot_hw.launch
table_tennis_robot/table_tennis_robot_bringup/src/: arduserial.cpp  epos_communication.cpp  rpm2ms_rads.cpp  tabletennis_robot_bringup.cpp  tabletennis_robot_epos2.cpp  tabletennis_robot_hw.cpp  tabletennis_robot_main.cpp  unified_joint_cmd.cpp
table_tennis_robot/table_tennis_robot_gazebo/: CMakeLists.txt  package.xml
table_tennis_robot/table_tennis_robot_msgsrv/: CMakeLists.txt  package.xml
table_tennis_robot/tabletennisrobot_bringup/: CMakeLists.txt  package.xml
table_tennis_robot/tabletennisrobot_control/: CMakeLists.txt  package.xml
table_tennis_robot/tabletennisrobot_description/: CMakeLists.txt  package.xml
table_tennis_robot/tabletennisrobot_description/config/: robot_state_visualize.rviz
table_tennis_robot/tabletennisrobot_description/launch/: TTbot_rviz.launch  TTbot_upload.launch  ttbot_gazebo.launch
table_tennis_robot/tabletennisrobot_description/meshes/collision/: joint_1_link_MKgS.STL  joint_2_link_MKgS.STL  joint_3_link_MKgS.STL  joint_4_link_MKgS.STL  joint_5_link.STL  robot_base_link_MKgS.STL  slide_link_MKgS.STL
table_tennis_robot/tabletennisrobot_description/meshes/visual/: base_link.dae  joint_1_link.dae  joint_2_link.dae  joint_3_link.dae  joint_4_link.dae  joint_4_link_DLC.dae  joint_5_link_DLC.dae  racket3_1.dae  slide_link_red.dae  ttbot_joint_3.dae  ttbot_joint_4.dae
table_tennis_robot/tabletennisrobot_description/urdf/: TTbot.gazebo.xacro  TTbot.transmission.xacro  TTbot.urdf.xacro  TTbot_robot.urdf.xacro  common.gazebo.xacro
table_tennis_robot/tabletennisrobot_gazebo/: CMakeLists.txt  package.xml
table_tennis_robot/tabletennisrobot_msgsrv/: CMakeLists.txt  package.xml
table_tennis_robot/tabletennisrobot_neuralnet/: CMakeLists.txt  package.xml
table_tennis_robot/tabletennisrobot_neuralnet/launch/: ball_state_plot.launch
table_tennis_robot/tabletennisrobot_neuralnet/scripts/: autolaunch.py  dynamic_plot.py  openai_reward.py  save_joint_pos.py  sub_real_ball.py  ttbot_inverse_arm.py
table_tennis_robot/tabletennisrobot_neuralnet/scripts/ttbot_model/: discriminator_net.py  policy_net.py
table_tennis_robot/tabletennisrobot_neuralnet/src/: autolaunch.cpp  reset_sim.cpp  set_model_config.cpp  spawn_ball.cpp  sub_ball_move_arm.cpp  track_ball_inverse.cpp  track_ball_inverse2.cpp  track_ball_inverse_left.cpp  track_ball_inverse_right.cpp
two_joint_arm_demos/two_joint_arm_control/: CMakeLists.txt  package.xml
two_joint_arm_demos/two_joint_arm_control/config/: two_joint_arm_control.yaml
two_joint_arm_demos/two_joint_arm_control/launch/: two_joint_arm_control.launch  two_joint_arm_rqt.launch  two_joint_arm_rqt.perspective
two_joint_arm_demos/two_joint_arm_description/: CMakeLists.txt  model.config  package.xml
two_joint_arm_demos/two_joint_arm_gazebo/: CMakeLists.txt  package.xml
(+66 files in other folders)
