<?xml version="1.0"?>
<package format="2">
  <name>tabletennisrobot_description</name>
  <version>0.0.0</version>
  <description>The robot_description package</description>


  <maintainer email="dennis@todo.todo">dennis</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
